--- a/inline-audio/package.json
+++ b/inline-audio/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "author": "inline-audio",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "lint": "eslint --ext .js,.html . --ignore-path .gitignore && prettier \"**/*.js\" --check --ignore-path .gitignore",
     "format": "eslint --ext .js,.html . --fix --ignore-path .gitignore && prettier \"**/*.js\" --write --ignore-path .gitignore",
@@ -17,13 +18,15 @@
     "start": "web-dev-server"
   },
   "dependencies": {
+    "@lrnwebcomponents/simple-colors": "^4.2.0",
+    "@lrnwebcomponents/simple-icon": "^4.2.0",
     "lit": "^2.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
     "@custom-elements-manifest/analyzer": "^0.4.17",
     "@open-wc/building-rollup": "^2.0.2",
-    "@open-wc/eslint-config": "^9.0.2",
+    "@open-wc/eslint-config": "^9.2.1",
     "@open-wc/testing": "^3.1.6",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
@@ -42,12 +45,10 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.60.0",
     "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-workbox": "^6.2.0"
+    "rollup-plugin-workbox": "^6.2.0",
+    "rollup-plugin-copy": "3.4.0"
   },
   "eslintConfig": {
-    "parserOptions": {
-      "ecmaVersion": "latest"
-    },
     "extends": [
       "@open-wc",
       "prettier"
@@ -68,5 +69,9 @@
       "prettier --write"
     ]
   },
-  "customElements": "custom-elements.json"
+  "customElements": "custom-elements.json",
+  "main": "rollup.config.js",
+  "directories": {
+    "test": "test"
+  }
 }
