--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "rimraf dist && rollup -c rollup.config.js && npm run analyze -- --exclude dist",
     "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
     "analyze": "cem analyze --litelement",
-    "start": "web-dev-server"
+    "start": "web-dev-server",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@lrnwebcomponents/simple-colors": "^4.2.0",
@@ -39,7 +40,7 @@
     "deepmerge": "^4.2.2",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^4.3.8",
+    "husky": "^8.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
